Fixed UI issues with rounded box
Former-commit-id: 51607d4d3f26277694e8ee03c97964b7da6e3fa1
Former-commit-id: a3c530971df5de4879851f9d0d1e84ddc10aa17e [formerly 211b2fb098774caf46a9b33524091e495179b51a]
Former-commit-id: c4aca5054a3bad82de7c9a8aeb07e9e9f39bf5a9

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
@@ -13,7 +13,7 @@
                      BackgroundColor="{StaticResource WindowBackgroundTable}"
                      mc:Ignorable="d"
                      d:DataContext="{d:DesignInstance viewModels:FoodsViewModel}"
-                     Icon="ic_restaurant_menu_black.png"
+                     Icon="restaurant"
                      Title="Foods">
 
     <pages:FoodsPage.Resources>
