--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/ChatPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/ChatPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Restaurant.Mobile.UI.Pages.ChatPage"
-             Icon="ic_wechat.png"
+             Icon="chat"
              Title="Foods">
     <ContentPage.Content>
         <StackLayout>
