--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/OrdersPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/OrdersPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Restaurant.Mobile.UI.Pages.OrdersPage"
-             Icon="ic_basket.png"
+             Icon="shopping_basket"
              Title="Orders">
     <ContentPage.Content>
         <StackLayout>
