fixed CI test faling for Xamarin Project
Former-commit-id: 2306673d9e5967eaf6e449b5bc400663b5613323
Former-commit-id: c33f75a6ff89b5836c064ab00bcaf226b0bbf812 [formerly 648c2435bba166d69142d1e4d85471d80ba920e4]
Former-commit-id: 7c3f9f5effe970f3a5e467493343acbd012dd2eb

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/StepperView.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/StepperView.xaml
@@ -2,10 +2,11 @@
 
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
              x:Class="Restaurant.Mobile.UI.Views.StepperView">
     <ContentView.Content>
         <StackLayout Orientation="Horizontal">
-            <Button Image="minus" WidthRequest="30" HeightRequest="15" Clicked="MinusButton_OnClicked"
+            <controls:FlatButton Image="minus" WidthRequest="30" HeightRequest="15" Clicked="MinusButton_OnClicked"
                     BackgroundColor="Transparent" />
             <Grid VerticalOptions="Center">
                 <Frame CornerRadius="8" BackgroundColor="{StaticResource grayLight}"  HasShadow="False"
@@ -14,7 +15,7 @@
                     <Label TextColor="Black" x:Name="StepLabel" FontSize="15" />
                 </StackLayout>
             </Grid>
-            <Button Image="plus" WidthRequest="30" HeightRequest="15" BackgroundColor="Transparent"
+            <controls:FlatButton Image="plus" WidthRequest="30" HeightRequest="15" BackgroundColor="Transparent"
                     Clicked="PlusButton_OnClicked" />
         </StackLayout>
     </ContentView.Content>
