--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
@@ -10,16 +10,19 @@
                       xmlns:viewModels="clr-namespace:Restaurant.Core.ViewModels;assembly=Restaurant.Core"
                       xmlns:pages="clr-namespace:Restaurant.Mobile.UI.Pages;assembly=Restaurant.Mobile.UI"
                       xmlns:views="clr-namespace:Restaurant.Mobile.UI.Views;assembly=Restaurant.Mobile.UI"
+                      xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
                       BackgroundColor="{StaticResource WindowBackground}"
                       d:DataContext="{d:DesignInstance viewModels:BasketViewModel}">
 
     <pages:BasketPageXaml.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0">
+        <AbsoluteLayout>
+          
+            
+          
+
+            <StackLayout AbsoluteLayout.LayoutBounds="1, 1, 1, .8"
+                         AbsoluteLayout.LayoutFlags="All">
+               
                 <ListView x:Name="orders" ItemsSource="{Binding Orders}" SeparatorColor="{StaticResource grayPrimary}"
                           RowHeight="100">
                     <ListView.ItemTemplate>
@@ -66,9 +69,19 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
-            <StackLayout Grid.Row="1" Padding="10, 5,10,10">
-                <Button Text="Complete your orders" Command="{Binding CompleteOrder}" />
+
+            <StackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 0.2" 
+                         AbsoluteLayout.LayoutFlags="All"
+                         BackgroundColor="{StaticResource primaryColor}">
+
             </StackLayout>
-        </Grid>
+
+            <controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .16, 50, 50"
+                                           Command="{Binding CompleteOrder}"
+                                           AbsoluteLayout.LayoutFlags="PositionProportional"
+                                           RippleColor="{StaticResource primaryColorLight}"
+                                           BackgroundColor="{StaticResource grayPrimary}"
+                                           Image="ic_heart_outline_white_24dp.png"/>
+        </AbsoluteLayout>
     </pages:BasketPageXaml.Content>
 </pages:BasketPageXaml>
