added icons and Total Price for basket page
Former-commit-id: 26f7a9ee283fef5eaf5e5a45edf02e140ac2b6c1
Former-commit-id: 7dc18e1d456bec975558e8c73861a07382296ef5 [formerly a2703eab213043401b1922ef096aa956e1ff8ec6]
Former-commit-id: 728b9e108242ee2f20a360b30c22c8c826df1b19

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
@@ -16,12 +16,9 @@
 
     <pages:BasketPageXaml.Content>
         <AbsoluteLayout>
-          
-            
-          
-
             <StackLayout AbsoluteLayout.LayoutBounds="1, 1, 1, .8"
-                         AbsoluteLayout.LayoutFlags="All">
+                         AbsoluteLayout.LayoutFlags="All"
+                         Margin="0, 15, 0, 0">
                
                 <ListView x:Name="orders" ItemsSource="{Binding Orders}" SeparatorColor="{StaticResource grayPrimary}"
                           RowHeight="100">
@@ -72,16 +69,17 @@
 
             <StackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 0.2" 
                          AbsoluteLayout.LayoutFlags="All"
-                         BackgroundColor="{StaticResource primaryColor}">
-
+                         BackgroundColor="{StaticResource primaryColor}" Padding="20, 5, 20, 20">
+                <Label Text="Total Price:" FontSize="Large" TextColor="White"/>
+                <Label Text="{Binding TotalPrice, StringFormat='{0:C}'}" FontSize="Medium" TextColor="White"/>
             </StackLayout>
 
             <controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .16, 50, 50"
                                            Command="{Binding CompleteOrder}"
                                            AbsoluteLayout.LayoutFlags="PositionProportional"
                                            RippleColor="{StaticResource primaryColorLight}"
-                                           BackgroundColor="{StaticResource grayPrimary}"
-                                           Image="ic_heart_outline_white_24dp.png"/>
+                                           ButtonColor="{StaticResource badgeColor}"
+                                           Image="check"/>
         </AbsoluteLayout>
     </pages:BasketPageXaml.Content>
 </pages:BasketPageXaml>
