--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -98,6 +98,6 @@
         <controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .5, 50, 50"
                                        AbsoluteLayout.LayoutFlags="PositionProportional"
                                        RippleColor="{StaticResource primaryColorLight}"
-                                       Image="ic_heart_outline_white_24dp.png"/>
+                                       Image="heart_outline_white"/>
     </AbsoluteLayout>
 </pages:FoodDetailPageXaml>
