Orders component and removed reference daily eatings from orders for a while
Former-commit-id: fbff6250b8e37d1fb2314f33931198ed70788d46
Former-commit-id: 905cee31bc24da83581ccc28d58d2beb331c35a1 [formerly e917a56c4fe7dcf19b6a1b30143a2be6cbc7ddb5]
Former-commit-id: e756e183c91de737ac55c62057db1e8c67dc7fcd

--- a/Dashboard-Admin/src/app/app.component.html
+++ b/Dashboard-Admin/src/app/app.component.html
@@ -1,6 +1,12 @@
-<app-menu></app-menu>
-<div class="pusher" style="padding:20px 0 0 160px;">
-  <div class="ui container">
-    <router-outlet></router-outlet>
+<div class="pushable" id="example">
+  <div class="pusher">
+    <div class="full height">
+      <div class="toc">
+        <app-menu class="ui vertical inverted sticky menu" style="height: 100%"></app-menu>
+      </div>
+      <div class="article">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
   </div>
 </div>
