--- a/Dashboard-Admin/src/app/components/menu/menu.component.html
+++ b/Dashboard-Admin/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="ui vertical left visible sidebar inverted menu">
+<div>
   <div class="ui horizontal list" style="padding:20px;">
     <div class="item">
       <img class="ui mini circular image" src="/assets/steve.jpg">
