ios icons finished
Former-commit-id: 334bc24c3831205176b309a005e4af54b64f6f6b
Former-commit-id: d2e5240caa7e786f69f4b3d55c5b2a10cd6ef080 [formerly 5545c007f6efb6d27ca76bc4682f5b707cd55d12]
Former-commit-id: d4aa743ebb4cab94e99e13b5b597060e61bc1f5c

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -40,7 +40,8 @@
                        Source="{Binding SelectedFood.Picture}"
                        Aspect="AspectFill" />
 
-                <Grid Opacity=".5" BackgroundColor="{StaticResource asphaltDark}" />
+                <Grid Opacity=".5" BackgroundColor="{StaticResource asphaltDark}" HorizontalOptions="FillAndExpand"
+                      VerticalOptions="FillAndExpand"/>
 
                 <StackLayout Padding="10, 10, 10, 35" VerticalOptions="EndAndExpand">
                     <StackLayout Spacing="0" Padding="10">
