ProgressRing when image loading
Former-commit-id: b225d8b9ff996c65651bc37c8be3a5a704680e81
Former-commit-id: 965315b810746562b8352a1b130421c5ae696b37 [formerly 324ca8721f11947589722990bbbbd4408294549d]
Former-commit-id: 6aaf88fd433ccc0346448598217d8e2b3d5f782f

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/FoodsListView.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/FoodsListView.xaml
@@ -35,7 +35,10 @@
 
                                 <Image x:Name="photoImage" Source="{Binding Picture}" Aspect="AspectFill"
                                        HeightRequest="120" />
-
+                                 <ActivityIndicator IsRunning="{Binding Source={x:Reference photoImage}, Path=IsLoading}" 
+                                                    IsVisible="{Binding Source={x:Reference photoImage}, Path=IsLoading}">
+                                     
+                                 </ActivityIndicator>
                                 <StackLayout Padding="10, 10, 10, 3">
                                     <StackLayout>
                                         <Label Text="{Binding Name}" FontSize="Medium"
@@ -75,7 +78,6 @@
 
                                 </StackLayout>
                                 <controls:FooterDivider VerticalOptions="Center" />
-
                             </StackLayout>
                         </controls:CardView>
                     </StackLayout>
