--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
@@ -38,9 +38,15 @@
                                  x:Name="FoodsList" />
 
             <StackLayout IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center">
-                <ActivityIndicator IsRunning="{Binding IsLoading}" Color="{StaticResource grayDark}"
+                <ActivityIndicator IsRunning="{Binding IsLoading}"
                                    HorizontalOptions="Center"
-                                   VerticalOptions="EndAndExpand" />
+                                   VerticalOptions="EndAndExpand">
+                    <ActivityIndicator.Color>
+                        <OnPlatform x:TypeArguments="Color">
+                            <On Platform="Android" Value="{StaticResource primaryColor}"/>
+                        </OnPlatform>
+                    </ActivityIndicator.Color>
+                </ActivityIndicator>
             </StackLayout>
         </Grid>
     </pages:FoodsXamlPage.Content>
