Fixed android warning for Xamarin.Forms 2.5
Former-commit-id: 7611fbf7c6ab873be9ef868be0a4d1bd66f89b4a
Former-commit-id: eef0064a5baae0b9bcd0fd574c3a2a00dee99c80 [formerly 5a4218963a23b330ab99f303b7b9f2ecc6562964]
Former-commit-id: 1e30b22531a7904e5ac2852b3be1098a131b1216

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -76,7 +76,7 @@
                     <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
                            FontSize="16" Text="Total price: " />
                     <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
-                           x:Name="TotalPrice" FontSize="16" />
+                           Text="{Binding CurrentOrder.TotalPriceAnimated}" FontSize="16" />
                 </StackLayout>
 
                 <controls:Divider />
