--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/SignUpPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/SignUpPage.xaml
@@ -4,43 +4,39 @@
                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                         xmlns:welcome="clr-namespace:Restaurant.Mobile.UI.Pages.Welcome"
                         xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls"
-                        xmlns:converters="clr-namespace:Restaurant.Mobile.UI.Converters;assembly=Restaurant.Mobile.UI"
                         x:Class="Restaurant.Mobile.UI.Pages.Welcome.SignUpPage">
-    <welcome:SignUpPageXaml.Resources>
-        <converters:InverseBoolConverter x:Key="InverseBooleanConverter" />
-    </welcome:SignUpPageXaml.Resources>
+
     <welcome:SignUpPageXaml.Content>
         <StackLayout VerticalOptions="Center" Padding="25">
-            <StackLayout Orientation="Vertical" IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}">
+            <StackLayout Orientation="Vertical">
 
                 <StackLayout Orientation="Vertical" Padding="15">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Image Source="ic_email.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
-                               VerticalOptions="Center" />
+                    
+                    <Label Text="Email" Style="{StaticResource header}" />
 
-                        <controls:RestaurantEntry Text="{Binding Email}" Placeholder="Email"
-                                                  Grid.Column="1" VerticalOptions="Center"
+                    <controls:RestaurantEntry Text="{Binding Email}" Placeholder="Email"
+                                                  VerticalOptions="Center"
                                                   HorizontalOptions="FillAndExpand" HasBorder="False" />
-                    </Grid>
                 </StackLayout>
 
                 <StackLayout Orientation="Vertical" Padding="15">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Image Source="ic_key_variant.png" Grid.Column="0" WidthRequest="25" HeightRequest="25"
-                               VerticalOptions="Center" />
-                        <controls:RestaurantEntry HasBorder="False" Placeholder="Password"
-                                                  Grid.Column="1"
+                   
+                    <Label Text="Password" Style="{StaticResource header}" />
+
+                    <controls:RestaurantEntry HasBorder="False" Placeholder="Password"
                                                   HorizontalOptions="FillAndExpand" IsPassword="true"
                                                   Text="{Binding Password}" />
-                    </Grid>
+
+                </StackLayout>
+
+                <StackLayout Orientation="Vertical" Padding="15">
+
+                    <Label Text="Confirm password" Style="{StaticResource header}" />
+
+                    <controls:RestaurantEntry HasBorder="False" Placeholder="Confirm password"
+                                                  HorizontalOptions="FillAndExpand" IsPassword="true"
+                                                  Text="{Binding ConfirmPassword}" />
+
 
                 </StackLayout>
 
