ActivityIndacator size for android and changes with account controller
Former-commit-id: 489d1ec05003db27d71eeeef22ea9c73b2b959f7
Former-commit-id: baadf95beddbdde8470cea1fc6f21f6dbe86ce87 [formerly 77bcb6310cb22c1d7cc364d0b866f9b350f78c1b]
Former-commit-id: 333d3ee6d73b48036d9f331d7372de2636eba4f3

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodsPage.xaml
@@ -47,6 +47,7 @@
                         </OnPlatform>
                     </ActivityIndicator.Color>
                 </ActivityIndicator>
+                <Label TextColor="{StaticResource asphaltDark}" HorizontalOptions="Center">Loading...</Label>
             </StackLayout>
         </Grid>
     </pages:FoodsXamlPage.Content>
