--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/FoodsListView.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Views/FoodsListView.xaml
@@ -23,6 +23,15 @@
     <ListView.Header>
         <views:FoodsSearchView />
     </ListView.Header>
+    <ListView.Footer>
+        <ActivityIndicator IsRunning="True">
+            <ActivityIndicator.Color>
+                <OnPlatform x:TypeArguments="Color">
+                    <On Platform="Android" Value="{StaticResource primaryColor}"/>
+                </OnPlatform>
+            </ActivityIndicator.Color>
+        </ActivityIndicator>
+    </ListView.Footer>
 
     <ListView.ItemTemplate>
         <DataTemplate>
@@ -35,7 +44,9 @@
                                 <Grid HeightRequest="120">
                                     <Image x:Name="photoImage" Source="{Binding Picture}" Aspect="AspectFill" />
 
-                                    <ActivityIndicator VerticalOptions="Center" 
+                                    <ActivityIndicator VerticalOptions="Center"
+                                                       WidthRequest="25"
+                                                       HeightRequest="25"
                                                        IsRunning="{Binding Source={x:Reference photoImage}, Path=IsLoading}" 
                                                        IsVisible="{Binding Source={x:Reference photoImage}, Path=IsLoading}">
                                         <ActivityIndicator.Color>
