--- a/src/Server/Restaurant.Server.Api/Views/Home/Index.cshtml
+++ b/src/Server/Restaurant.Server.Api/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <h2>server is live!</h2>
-<a href="/api/foods">Foods controller</a> <br/>
+<a href="/api/foods/GetAll">Foods controller</a> <br/>
 <a href="/api/orders">Orders controller</a> <br />
 <a href="/api/categories">Categories controller</a><br />
