Microsoft App center setup
Former-commit-id: 8a3946e44edbe75384d397ff138132a0bcc804a9
Former-commit-id: 3c6acea236ba68b12ec3737d4d3b71e616054754 [formerly 6f7ef56572d92237aba84aa55d101249ab95b4c5]
Former-commit-id: 94645540add641600b2767691171eec358402779

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Android/MenuPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Android/MenuPage.xaml
@@ -6,6 +6,8 @@
              x:Class="Restaurant.Mobile.UI.Pages.Android.MenuPage"
              Title="Restaurant">
     <ContentPage.Content>
-        <controls:NavigationView x:Name="NavigationView" />
+        <controls:NavigationView x:Name="NavigationView" 
+                                 UserEmail="{Binding UserViewModel.Email}" 
+                                 UserPicture="{Binding UserViewModel.UserInfoViewModel.Picture}"/>
     </ContentPage.Content>
 </ContentPage>
