--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -20,85 +20,77 @@
     </pages:FoodDetailPage.ToolbarItems>
 
     <AbsoluteLayout>
-        <Grid BackgroundColor="White">
-            <Grid.RowDefinitions>
-                <RowDefinition>
-                    <RowDefinition.Height>
-                        <OnPlatform x:TypeArguments="GridLength">
-                            <On Platform="Android" Value="300" />
-                            <On Platform="iOS" Value="250" />
-                            <On Platform="Uwp" Value="300" />
-                        </OnPlatform>
-                    </RowDefinition.Height>
-                </RowDefinition>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
 
-            <Grid RowSpacing="0" ColumnSpacing="0">
-                <Image HorizontalOptions="FillAndExpand"
-                       VerticalOptions="FillAndExpand"
-                       Source="{Binding SelectedFood.Picture}"
-                       Aspect="AspectFill" />
+        <Grid RowSpacing="0" ColumnSpacing="0"
+              AbsoluteLayout.LayoutBounds="0,0,1,.5"
+              AbsoluteLayout.LayoutFlags="All">
+            <Image HorizontalOptions="FillAndExpand"
+                   VerticalOptions="FillAndExpand"
+                   Source="{Binding SelectedFood.Picture}"
+                   Aspect="AspectFill" />
 
-                <Grid Opacity=".5" BackgroundColor="{StaticResource asphaltDark}" HorizontalOptions="FillAndExpand"
-                      VerticalOptions="FillAndExpand"/>
+            <Grid Opacity=".5" BackgroundColor="{StaticResource asphaltDark}" HorizontalOptions="FillAndExpand"
+                  VerticalOptions="FillAndExpand" />
 
-                <StackLayout Padding="10, 10, 10, 35" VerticalOptions="EndAndExpand">
-                    <StackLayout Spacing="0" Padding="10">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="{Binding SelectedFood.Name}"
-                                   FontSize="18"
-                                   TextColor="White">
-                                <Label.FontFamily>
-                                    <OnPlatform x:TypeArguments="x:String">
-                                        <On Platform="iOS">HelveticaNeue-Light</On>
-                                        <On Platform="Android">sans-serif-light</On>
-                                    </OnPlatform>
-                                </Label.FontFamily>
-                            </Label>
-                            <Label Text="{Binding SelectedFood.Price, StringFormat='{0:C}'}" FontSize="18"
-                                   TextColor="{StaticResource  grayLight}" VerticalOptions="CenterAndExpand" />
-                        </StackLayout>
+            <StackLayout Padding="10, 10, 10, 35" VerticalOptions="EndAndExpand">
+                <StackLayout Spacing="0" Padding="10">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding SelectedFood.Name}"
+                               FontSize="18"
+                               TextColor="White">
+                            <Label.FontFamily>
+                                <OnPlatform x:TypeArguments="x:String">
+                                    <On Platform="iOS">HelveticaNeue-Light</On>
+                                    <On Platform="Android">sans-serif-light</On>
+                                </OnPlatform>
+                            </Label.FontFamily>
+                        </Label>
+                        <Label Text="{Binding SelectedFood.Price, StringFormat='{0:C}'}" FontSize="18"
+                               TextColor="{StaticResource  grayLight}" VerticalOptions="CenterAndExpand" />
+                    </StackLayout>
 
-                        <StackLayout Padding="0, 8">
-                            <Label Text="{Binding SelectedFood.Description}"
-                                   FontSize="12"
-                                   TextColor="{StaticResource grayLight}" />
-                        </StackLayout>
+                    <StackLayout Padding="0, 8">
+                        <Label Text="{Binding SelectedFood.Description}"
+                               FontSize="12"
+                               TextColor="{StaticResource grayLight}" />
                     </StackLayout>
                 </StackLayout>
-            </Grid>
-
-            <StackLayout Grid.Row="1" VerticalOptions="CenterAndExpand">
-
-                <StackLayout HorizontalOptions="Center" Orientation="Horizontal"
-                             Margin="{StaticResource FoodDetailtPadding}">
-                    <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
-                           FontSize="16" Text="Total price: " />
-                    <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
-                           Text="{Binding CurrentOrder.TotalPriceAnimated}" FontSize="16" />
-                </StackLayout>
-
-                <controls:Divider />
-
-                <views:StepperView Margin="{StaticResource FoodDetailtPadding}" MinValue="0" HorizontalOptions="Center"
-                                   Value="{Binding CurrentOrder.Quantity}" />
-
-                <controls:Divider />
             </StackLayout>
-
         </Grid>
 
-        <Button AbsoluteLayout.LayoutBounds=".5, .95, AutoSize, AutoSize" WidthRequest="300"
+
+        <StackLayout AbsoluteLayout.LayoutBounds="0, 0.75, 1,AutoSize"
+                     AbsoluteLayout.LayoutFlags="XProportional,YProportional, WidthProportional">
+
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal"
+                         Margin="{StaticResource FoodDetailtPadding}">
+                <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
+                       FontSize="16" Text="Total price: " />
+                <Label TextColor="{StaticResource grayDark}" VerticalOptions="Center" HorizontalOptions="Center"
+                       Text="{Binding CurrentOrder.TotalPriceAnimated}" FontSize="16" />
+            </StackLayout>
+
+            <controls:Divider />
+
+            <views:StepperView Margin="{StaticResource FoodDetailtPadding}" MinValue="0" HorizontalOptions="Center"
+                               Value="{Binding CurrentOrder.Quantity}" />
+
+            <controls:Divider />
+        </StackLayout>
+
+        <Button AbsoluteLayout.LayoutBounds=".5, 1, AutoSize, AutoSize" WidthRequest="300"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
                 HorizontalOptions="Center"
                 Command="{Binding AddToBasket}"
                 VerticalOptions="EndAndExpand"
+                Margin="0, 0, 0, 10"
                 Text="Add to card" />
 
         <controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .5, 50, 50"
                                        AbsoluteLayout.LayoutFlags="PositionProportional"
                                        RippleColor="{StaticResource primaryColorLight}"
-                                       Image="heart_outline_white"/>
+                                       Image="heart_outline_white" />
+
+
     </AbsoluteLayout>
 </pages:FoodDetailPageXaml>
