--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/WelcomeStartPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/WelcomeStartPage.xaml
@@ -3,16 +3,9 @@
 <welcome:WelcomeStartPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
                                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                                xmlns:welcome="clr-namespace:Restaurant.Mobile.UI.Pages.Welcome;assembly=Restaurant.Mobile.UI"
-                               xmlns:controls1="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
+                               xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
                                x:Class="Restaurant.Mobile.UI.Pages.Welcome.WelcomeStartPage"
                                BackgroundColor="{StaticResource primaryColor}">
-
-    <!--<xfg:ContentPageGloss.BackgroundGradient>
-    <xfg:Gradient Rotation="150">
-      <xfg:GradientStep StepColor="#ffb74d" StepPercentage="0" />
-      <xfg:GradientStep StepColor="#ef6c00" StepPercentage="1" />
-    </xfg:Gradient>
-  </xfg:ContentPageGloss.BackgroundGradient>-->
 
     <welcome:WelcomeStartPageXaml.Content>
         <Grid>
@@ -45,12 +38,12 @@
                 </Grid.ColumnDefinitions>
 
                 <StackLayout x:Name="buttonStack" Spacing="0" Grid.Column="0" Scale="0">
-                    <controls1:FlatButton StyleId="authButton" Text="Sign In"
+                    <controls:FlatButton StyleId="authButton" Text="Sign In"
                                           Command="{Binding GoLogin}" BackgroundColor="Transparent" TextColor="White" />
                 </StackLayout>
 
                 <StackLayout Grid.Column="1" x:Name="signUpStack" Scale="0">
-                    <controls1:FlatButton x:Name="SignUpButton" Text="Sign Up" Command="{Binding GoRegister}"
+                    <controls:FlatButton x:Name="SignUpButton" Text="Sign Up" Command="{Binding GoRegister}"
                                           TextColor="White" BackgroundColor="Transparent" />
                 </StackLayout>
             </Grid>
