Pub sub pattern for BasketViewModel
Former-commit-id: 261db389e64aa737ada53e16fb23326251c5f4c8
Former-commit-id: 08c1f5a4f703dc520119b0c0b074746375463d5e [formerly e07e35edc7f9181557b99c5330927ef7e83f6d49]
Former-commit-id: 65cb90aa1753c522bf24facf9305992fa78fce9e

--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/BasketPage.xaml
@@ -20,7 +20,7 @@
                          AbsoluteLayout.LayoutFlags="All"
                          Margin="0, 15, 0, 0">
                
-                <ListView x:Name="orders" ItemsSource="{Binding Orders}" SeparatorColor="{StaticResource grayPrimary}"
+                <ListView x:Name="orders" ItemsSource="{Binding Items}" SeparatorColor="{StaticResource grayPrimary}"
                           RowHeight="100">
                     <ListView.ItemTemplate>
                         <DataTemplate>
