service discovery pattern implemented on Basket API using golang
Former-commit-id: 5718442f645e7b0c2f455258ec4995c82bbb1506
Former-commit-id: 1350a918bb8ce6930f8ff09ee3119cc3b52634b1 [formerly 865b338424ee0c1e1d6ca4cbf63d7af2b5214c95]
Former-commit-id: 0c083bfcc2dc7441a3a9f20d859f306a022f0e0a

--- a/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
@@ -16,46 +16,19 @@
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <!-- <link rel="stylesheet" href="~/css/site.css" /> -->
+    <link rel="stylesheet" href="~/css/my-login.css"/> 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="~/">
-                    <span class="navbar-brand">
-                        <img src="~/icon.png" class="icon-banner">
-                        IdentityServer4
-                    </span>
-                </a>
-            </div>
-
-            @if (!string.IsNullOrWhiteSpace(name))
-            {
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-action="Logout" asp-controller="Account">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            }
-        </div>
-    </div>
-
-    <div class="container body-content">
+    
+    <div>
         @RenderBody()
     </div>
 
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="~/js/my-login.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
