--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/App.xaml
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/App.xaml
@@ -4,10 +4,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls"
              xmlns:effects="clr-namespace:Restaurant.Mobile.UI.Effects"
+             xmlns:system="clr-namespace:System;assembly=netstandard"
              x:Class="Restaurant.Mobile.UI.App">
     <Application.Resources>
         <ResourceDictionary>
-
+            
             <OnPlatform x:TypeArguments="Thickness" Android="12,8" iOS="0, 0, 0, 10" WinPhone="0,0,0,16"
                         x:Key="CardPadding" />
 
@@ -123,7 +124,7 @@
                 <Setter Property="effects:NumberOfLinesEffect.NumberOfLines"
                         Value="3" />
             </Style>
-
+         
             <Style x:Key="BasketFoodsDescriptionLabelStyle" TargetType="{x:Type Label}">
                 <Setter Property="effects:NumberOfLinesEffect.ApplyNumberOfLines"
                         Value="True" />
