--- a/src/Server/services/identity.api/Identity.API/Views/Shared/Redirect.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Shared/Redirect.cshtml
@@ -1,8 +1,15 @@
 @using Identity.API.Controllers.Account
 @model Identity.API.Controllers.Account.RedirectViewModel
 
+@using Microsoft.Extensions.Configuration
+@using Identity.API.Utils
+
+@inject IConfiguration configuration
+
 <h1>You are now being returned to the application.</h1>
 <p>Once complete, you may close this tab</p>
 
 <meta http-equiv="refresh" content="0;url=@Model.RedirectUrl" data-url="@Model.RedirectUrl">
-<script src="~/js/signin-redirect.js"></script>
+@{ var (hasBasePath, basePath) = configuration.BasePath(); }
+<script src="~@basePath/js/signin-redirect.js"></script>
+
