--- a/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
+++ b/src/Server/services/identity.api/Identity.API/Views/Shared/_Layout.cshtml
@@ -1,10 +1,16 @@
 ﻿@using IdentityServer4.Extensions
+@using Microsoft.Extensions.Configuration
+@using Identity.API.Utils
+
+@inject IConfiguration configuration
+
 @{
     string name = null;
     if (!true.Equals(ViewData["signed-out"]))
     {
         name = Context.User?.GetDisplayName();
     }
+    var (hasBasePath, basePath) = configuration.BasePath();
 }
 <!DOCTYPE html>
 <html>
@@ -13,21 +19,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IdentityServer4</title>
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+    <link rel="icon" type="image/x-icon" href="~@basePath/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="~@basePath/favicon.ico" />
+    <link rel="stylesheet" href="~@basePath/lib/bootstrap/css/bootstrap.css" />
     <!-- <link rel="stylesheet" href="~/css/site.css" /> -->
-    <link rel="stylesheet" href="~/css/my-login.css"/> 
+    <link rel="stylesheet" href="~@basePath/css/my-login.css"/> 
 </head>
 <body>
     
     <div>
         @RenderBody()
     </div>
-
-    <script src="~/lib/jquery/jquery.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-    <script src="~/js/my-login.js"></script>
+    <script src="~@basePath/lib/jquery/jquery.js"></script>
+    <script src="~@basePath/lib/bootstrap/js/bootstrap.js"></script>
+    <script src="~@basePath/js/my-login.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
